@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 1997, 1998, 1999, 2000, 2001, 2008, 2011
+ * Copyright (c) 1997, 1998, 1999, 2000, 2001, 2008, 2011, 2014
  *	Tama Communications Corporation
  *
  * This file is part of GNU GLOBAL.
@@ -45,5 +45,6 @@ char *realpath(const char *, char *);
 #endif
 int makedirectories(const char *, const char *, int);
 const char *trimpath(const char *);
+char *vgetcwd(char *, size_t);
 
 #endif /* ! _PATH_H_ */
